fix cover img height on mobile

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -11,7 +11,7 @@ main#wrapper{
   left: 33%;
 }
 #page0 img{
-  height: 80vh;
+  height: 90vh;
   width: 42vw;
   position: absolute;
   left: 45%;
